# invariant-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yaml
benches/: ilog2.rs
src/: invariant_eq_macro.rs  invariant_ge_macro.rs  invariant_gt_macro.rs  invariant_le_macro.rs  invariant_lt_macro.rs  invariant_macro.rs  invariant_ne_macro.rs  lib.rs
