[package]
name = "invariant-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cappelletti", "Tommaso Fontana"]
description = "Rust macros for axiomatic invariant assertions."
homepage = "https://github.com/LucaCappelletti94/invariant-rs"
repository = "https://github.com/LucaCappelletti94/invariant-rs"
readme = "README.md"
license = "MIT"
keywords = ["invariant", "assertion", "axiomatic"]
categories = ["Development tools", "No standard library", "Rust patterns"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ilog2"
harness = false